--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,11 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#14B8A6",
+  "theme_color": "#007bff",
   "icons": [
     {
       "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
+      "sizes": "256x256",
       "type": "image/png"
     }
   ]
